# video-editor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  setup.bat
src/video_editor/: __main__.py
src/video_editor/core/: config.py  ffmpeg_engine.py  model.py  preview_render.py
src/video_editor/gui/: dialogs.py  main_window.py  preview.py  properties.py  timeline.py
src/video_editor/services/: ai_script.py  tts.py
tests/: test_gui_render.py  test_model.py  test_preview_render_qthread.py  test_render_via_preview_panel.py  test_render_with_vlc.py
