[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "video-editor"
version = "0.1.0"
description = "PyQt6 + FFmpeg video editor with AI speech overlay (Claude + ElevenLabs)."
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "ffmpeg-python>=0.2.0",
    "anthropic>=0.40.0",
    "elevenlabs>=1.0.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
video-editor = "video_editor.__main__:main"
